# crates-docs

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.release  Dockerfile.scratch  LICENSE  README.md  TEST_README.md  build.rs  docker-compose.yml  opencode.json  test-config-final.toml  test-config.toml  test_import.rs
.github/workflows/: opencode-review.yml  opencode-triage.yml  opencode.yml  rust.yml
docs/: docker-quick-start.md
docs/reverse-proxy/: Caddyfile  README.md  nginx.conf
docs/superpowers/specs/: 2026-04-03-docs-lookup-dedup-design.md
examples/: config.example.toml  handler_optimization.rs
logs/: crates-docs.log.2026-02-19
src/: config_reload.rs  lib.rs  main.rs
src/cache/: memory.rs  mod.rs  redis.rs
src/cli/: api_key_cmd.rs  commands.rs  config_cmd.rs  health_cmd.rs  list_api_keys_cmd.rs  mod.rs  revoke_api_key_cmd.rs  serve_cmd.rs  test_cmd.rs  version_cmd.rs
src/config/: mod.rs
src/error/: mod.rs
src/metrics/: mod.rs
src/server/: auth.rs  auth_middleware.rs  handler.rs  mod.rs  transport.rs
src/server/auth/: api_key_provider.rs  config.rs  manager.rs  mod.rs  tests.rs  token.rs  types.rs
src/server/handler/: config.rs  core.rs  core_handler.rs  mod.rs  standard.rs  types.rs
src/tools/: health.rs  mod.rs
src/tools/docs/: cache.rs  html.rs  lookup.rs  lookup_crate.rs  lookup_item.rs  mod.rs  search.rs
src/tools/docs/cache/: key.rs  mod.rs  stats.rs  ttl.rs
src/utils/: mod.rs
tests/: integration_tests.rs  unit_tests.rs
tests/e2e/: auth_enforcement_tests.rs  external_api_tests.rs  mod.rs  server_start_tests.rs  transport_tests.rs
tests/unit/: auth_tests.rs  cache_tests.rs  cli_tests.rs  config_tests.rs  error_tests.rs  health_tests.rs  lib_tests.rs  mod.rs  server_tests.rs  tools_docs_tests.rs  tools_tests.rs  utils_tests.rs
