[package]
name = "crates-docs"
version = "0.7.3"
edition = "2021"
description = "High-performance Rust crate documentation query MCP server, supports Stdio/HTTP/SSE transport and OAuth authentication"
authors = ["KingingWang <KingingWang@foxmail.com>"]
license = "MIT"
repository = "https://github.com/KingingWang/crates-docs"
readme = "README.md"
keywords = ["mcp", "docs", "documentation", "crates", "server"]
categories = ["api-bindings", "web-programming", "network-programming"]

[features]
default = ["server", "stdio", "macros", "cache-memory", "logging", "api-key"]
server = ["rust-mcp-sdk/server"]
client = ["rust-mcp-sdk/client"]
hyper-server = ["rust-mcp-sdk/hyper-server"]
streamable-http = ["rust-mcp-sdk/streamable-http"]
sse = ["rust-mcp-sdk/sse"]
stdio = ["rust-mcp-sdk/stdio"]
macros = ["rust-mcp-sdk/macros"]
auth = ["rust-mcp-sdk/auth"]
api-key = ["dep:api-keys-simplified"]
cache-memory = ["dep:moka"]
cache-redis = ["dep:redis"]
tls = ["rust-mcp-sdk/ssl"]
logging = []

[dependencies]
# MCP core dependencies
rust-mcp-sdk = { version = "0.9", default-features = false, features = ["server", "macros", "stdio", "hyper-server", "streamable-http", "sse"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
tokio = { version = "1.50", features = ["full"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
toml_edit = "0.25.10"
anyhow = "1.0"
thiserror = "2.0"
notify = "8.2"

# Cache system
moka = { version = "0.12", optional = true, features = ["sync"] }
redis = { version = "1.0", optional = true, features = ["tokio-comp"] }

# API Key authentication
api-keys-simplified = { version = "0.5", optional = true }

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
prometheus-client = "0.24.1"

# Utility libraries
async-trait = "0.1"
html2md = "0.2"
scraper = "0.26"
regex = "1.11"
url = "2.5"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
fastrand = "2.3"
uuid = { version = "1.23.0", features = ["v4"] }

# CLI tools
clap = { version = "4.5", features = ["derive", "env"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.50", features = ["full", "test-util"] }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
tempfile = "3.27.0"
temp-env = "0.3"
wiremock = "0.6"
serial_test = "3.0"
http = "1"

[[bin]]
name = "crates-docs"
path = "src/main.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
