[package]
name = "crates-docs"
version = "0.10.1"
edition = "2021"
description = "High-performance Rust crate documentation query MCP server, supports Stdio/HTTP/SSE transport and OAuth authentication"
authors = ["KingingWang <KingingWang@foxmail.com>"]
license = "MIT"
repository = "https://github.com/KingingWang/crates-docs"
readme = "README.md"
keywords = ["mcp", "docs", "documentation", "crates", "server"]
categories = ["api-bindings", "web-programming", "network-programming"]

[features]
default = ["server", "stdio", "macros", "cache-memory", "logging", "api-key"]
server = ["rust-mcp-sdk/server"]
client = ["rust-mcp-sdk/client"]
hyper-server = ["rust-mcp-sdk/hyper-server"]
streamable-http = ["rust-mcp-sdk/streamable-http"]
sse = ["rust-mcp-sdk/sse"]
stdio = ["rust-mcp-sdk/stdio"]
macros = ["rust-mcp-sdk/macros"]
auth = ["rust-mcp-sdk/auth"]
api-key = ["dep:api-keys-simplified"]
cache-memory = ["dep:moka"]
cache-redis = ["dep:redis"]
tls = ["rust-mcp-sdk/ssl"]
logging = []

[dependencies]
# MCP core dependencies
rust-mcp-sdk = { version = "0.9", default-features = false, features = ["server", "macros", "stdio", "hyper-server", "streamable-http", "sse"] }

# HTTP client
reqwest = { version = "0.13.4", features = ["json"] }
reqwest-middleware = "0.5.2"
reqwest-retry = "0.9.1"
tokio = { version = "1.52", features = ["full"] }

# Serialization and configuration
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
toml_edit = "0.25.12"
anyhow = "1.0.102"
thiserror = "2.0.18"
notify = "8.2"

# Cache system
moka = { version = "0.12.15", optional = true, features = ["sync"] }
redis = { version = "1.2", optional = true, features = ["tokio-comp"] }

# API Key authentication
api-keys-simplified = { version = "0.5.1", optional = true }

# Logging and monitoring
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
prometheus-client = "0.24.1"

# Utility libraries
async-trait = "0.1.89"
html2md = "0.2.15"
scraper = "0.27"
regex = "1.12"
url = "2.5.8"
flate2 = "1.1"
chrono = { version = "0.4.44", features = ["serde"] }
urlencoding = "2.1.3"
fastrand = "2.4"
uuid = { version = "1.23.2", features = ["v4"] }

# CLI tools
clap = { version = "4.6", features = ["derive", "env"] }

# Restore default SIGPIPE handling for the CLI (see src/main.rs)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
chrono = "0.4.44"

[dev-dependencies]
tokio = { version = "1.52", features = ["full", "test-util"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.150"
tempfile = "3.27"
temp-env = "0.3.6"
wiremock = "0.6.5"
serial_test = "3.4"
http = "1.4"

[[bin]]
name = "crates-docs"
path = "src/main.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
